<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical" >
	
	<!-- Colored bar at top -->
	<TextView android:id="@+id/colored_bar"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="top"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:paddingTop="4dp"
		android:paddingBottom="4dp"
		android:textColor="#fff"
		android:background="@color/theme_orange"
		android:layout_alignParentTop="true"
		android:text="">
		<requestFocus />
	</TextView>
    
	<ScrollView android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/activity_background"
   		android:layout_above="@+id/bottom_nav"
   		android:layout_below="@id/colored_bar">
		
    <RelativeLayout android:layout_width="match_parent"
    	android:layout_height="match_parent"
   		android:padding="10dip"
   		android:layout_margin="0dip"
   		android:background="@color/transparent" >
   		
	    <!-- EditText for Hop Name -->
	    <TextView android:id="@+id/hop_name_title"
	        android:text="@string/name"
	        android:layout_below="@id/placeholder"
	        style="@style/title_light" />
    
	    <EditText
	        android:id="@+id/hop_name_edit_text"
	        android:hint="@string/enter_name"
	        android:layout_below="@id/hop_name_title"
	        style="@style/text_input"
	        android:selectAllOnFocus="true" />
    
	    <LinearLayout android:id="@+id/first_ll"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/transparent"
	        android:layout_below="@id/hop_name_edit_text" >
			    
		    <TextView android:id="@+id/alpha_acids_title"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:background="@color/transparent"
		        android:layout_marginBottom="3dip"
		        android:gravity="center"
		        android:textSize="15dip"
		        android:textColor="@color/title_color"
		        android:textStyle="bold"
		        android:text="@string/alpha_acids_title" />
		    
		    <TextView android:id="@+id/weight_title"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:background="@color/transparent"
		        android:layout_marginBottom="3dip"
		        android:gravity="center"
		        android:textSize="15dip"
		        android:textStyle="bold"
		        android:textColor="@color/title_color"
		        android:text="@string/weight_oz" />
		              
	    </LinearLayout>
    
	    <LinearLayout android:id="@+id/second_ll"
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/transparent"
	        android:layout_below="@id/first_ll" >
		    
		    <EditText
		        android:id="@+id/hop_acid_edit_text"
		        android:inputType="numberDecimal"
		        android:selectAllOnFocus="true"
		        android:layout_width="0dp"
		        android:layout_height="40dip"
		        android:layout_weight="1"
		        android:background="@drawable/rounded_bg_white"
		        android:maxLength="6"
		        android:paddingLeft="10dip"
		        android:layout_marginRight="2dip"
		        android:layout_marginBottom="15dip" />
		    
		    <EditText
		        android:id="@+id/hop_weight_edit_text"
		        android:inputType="numberDecimal"
		        android:selectAllOnFocus="true"
		        android:layout_width="0dp"
		        android:layout_height="40dip"
		        android:layout_weight="1"
		        android:maxLength="5"
		        android:background="@drawable/rounded_bg_white"
		        android:paddingLeft="10dip"
		        android:layout_marginBottom="15dip" />
		            
    	</LinearLayout>
    	
	    <LinearLayout android:id="@+id/third_ll"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/transparent"
	        android:layout_below="@id/second_ll" >
		    
		    <!-- Boil time -->
		    <TextView android:id="@+id/boil_boil_time_title"
		        android:text="@string/boil_time"
		        style="@style/title_light" />
		              
	    </LinearLayout>
	    
	    <LinearLayout android:id="@+id/forth_ll"
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/transparent"
	        android:layout_below="@id/third_ll"
	        android:layout_marginBottom="15dip" >
	        	    
		    <EditText
		        android:id="@+id/boil_time_edit_text"
		        android:inputType="numberDecimal"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="40dip"
		        android:background="@drawable/rounded_bg_white"
		        android:padding="10dip"
		        android:selectAllOnFocus="true"
		        android:hint="@string/boil_time" />
	
	    </LinearLayout>
	    
    </RelativeLayout>
	</ScrollView>
	
    <!-- Bottom Bar -->
    <LinearLayout android:id="@+id/bottom_nav"
        android:layout_height="60dip"
        android:background="@color/activity_background"
        android:layout_width="fill_parent" 
        android:padding="10dp"
        android:layout_alignParentBottom="true">
	    
        <!-- Cancel Button -->
	    <Button
	        android:id="@+id/cancel_button"
	        android:onClick="onClick"
	        android:text="@string/cancel"
			style="@style/button_left" />
	    
	    <!-- Delete Button -->
	    <Button
	        android:id="@+id/delete_button"
	        android:onClick="onClick"
	        android:text="@string/delete"
	        style="@style/button" />
	
	    <!-- Submit Button -->
	    <Button
	        android:id="@+id/submit_button"
	        android:onClick="onClick"
	        android:text="@string/edit"
	        style="@style/button_right" />

    </LinearLayout>
</RelativeLayout>
