<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical" >

	<!-- Colored bar at top -->
	<TextView android:id="@+id/colored_bar"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="top"
		android:focusable="true"
		android:focusableInTouchMode="true"
		android:paddingTop="4dp"
		android:paddingBottom="4dp"
		android:textColor="#fff"
		android:background="@color/theme_orange"
		android:layout_alignParentTop="true"
		android:text="">
		<requestFocus />
	</TextView>
	
	<ScrollView android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/activity_background"
   		android:layout_above="@+id/bottom_nav"
   		android:layout_below="@id/colored_bar">

    <RelativeLayout android:layout_width="match_parent"
    	android:layout_height="match_parent"
   		android:padding="10dip"
   		android:layout_margin="0dip"
   		android:background="@color/transparent" >
		
	    <!-- EditText for Misc Name -->
	    <TextView android:id="@+id/name_title"
	        android:text="@string/name"
	        style="@style/title_light" />

	    <EditText
	        android:id="@+id/name_edit_text"
	        android:hint="@string/enter_name"
	        android:layout_below="@id/name_title"
	        style="@style/text_input"
	        android:selectAllOnFocus="true" />

	    <LinearLayout android:id="@+id/spinners"
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="15dp"
	        android:background="@color/transparent"
	        android:layout_below="@id/name_edit_text" >

	    </LinearLayout>

	    <LinearLayout android:id="@+id/first_ll"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/transparent"
	        android:layout_below="@id/spinners" >

		    <TextView android:id="@+id/amount_title"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:background="@color/transparent"
		        android:layout_marginBottom="3dip"
		        android:gravity="left"
		        android:textSize="15dip"
		        android:textStyle="bold"
		        android:textColor="@color/title_color"
		        android:text="@string/amount" />
			
		    <TextView android:id="@+id/use_title"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:background="@color/transparent"
		        android:layout_marginBottom="3dip"
		        android:gravity="left"
		        android:textSize="15dip"
		        android:textStyle="bold"
		        android:textColor="@color/title_color"
		        android:text="@string/use" />
			
	    </LinearLayout>

	    <LinearLayout android:id="@+id/second_ll"
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/transparent"
	        android:layout_below="@id/first_ll" >

		    <EditText
		        android:id="@+id/amount_edit_text"
		        android:inputType="numberDecimal"
		        android:selectAllOnFocus="true"
		        android:layout_width="0dp"
		        android:layout_height="40dip"
		        android:layout_weight="1"
		        android:maxLength="5"
		        android:background="@drawable/rounded_bg_white"
		        android:paddingLeft="10dip"
		        android:layout_marginBottom="15dip" />
			
			<Spinner
		        android:id="@+id/misc_use_spinner"
		        android:layout_width="0dip"
				android:layout_weight="1"
		        android:layout_height="40dip"
		        android:drawSelectorOnTop="false"
		        android:padding="7dip"
		        android:background="@drawable/rounded_bg_white"
		        android:spinnerMode="dialog"
		        android:paddingLeft="10dip" />

    	</LinearLayout>

	    <LinearLayout android:id="@+id/third_ll"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/transparent"
	        android:layout_below="@id/second_ll" >

		    <!-- Boil time -->
		    <TextView android:id="@+id/time_title"
		        android:text="@string/boil_time"
		        style="@style/title_light" />

	    </LinearLayout>

	    <LinearLayout android:id="@+id/forth_ll"
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/transparent"
	        android:layout_below="@id/third_ll"
	        android:layout_marginBottom="15dip" >

		    <EditText
		        android:id="@+id/time_edit_text"
		        android:inputType="numberDecimal"
		        android:selectAllOnFocus="true"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="40dip"
		        android:background="@drawable/rounded_bg_white"
		        android:padding="10dip"
		        android:hint="@string/boil_time" />

	    </LinearLayout>

    </RelativeLayout>
	</ScrollView>

    <!-- Bottom Bar -->
    <LinearLayout android:id="@+id/bottom_nav"
        android:layout_height="60dip"
        android:background="@color/activity_background"
        android:layout_width="fill_parent" 
        android:padding="10dp"
        android:layout_alignParentBottom="true">

        <!-- Cancel Button -->
	    <Button
	        android:id="@+id/cancel_button"
	        android:onClick="onClick"
	        android:text="@string/cancel"
			style="@style/button_left" />
		
	    <!-- Delete Button -->
	    <Button
	        android:id="@+id/delete_button"
	        android:onClick="onClick"
	        android:text="@string/delete"
	        style="@style/button" />

	    <!-- Submit Button -->
	    <Button
	        android:id="@+id/edit_grain_submit_button"
	        android:onClick="onClick"
	        android:text="@string/edit"
	        style="@style/button_right" />

    </LinearLayout>

</RelativeLayout>
