<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/textured_background_light"
    android:orientation="vertical" >
        
    <RelativeLayout android:layout_width="match_parent"
    	android:layout_height="match_parent"
   		android:padding="10dip"
   		android:layout_margin="10dip"
   		android:layout_above="@+id/bottom_nav"
   		android:layout_alignParentTop="true"
   		android:background="@drawable/textured_background" >
   		
	    <!-- Spinner -->
	    <TextView android:id="@+id/spinner_title"
	        android:text="@string/yeast"
	        android:layout_alignParentTop="true"
	        style="@style/title_light" />
	    
	    <Spinner
	        android:id="@+id/ingredient_spinner"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:drawSelectorOnTop="false"
	        android:padding="10dip"
	        android:background="@drawable/rounded_bg_white"
	        android:spinnerMode="dialog"
	        android:layout_marginBottom="15dip"
	        android:paddingLeft="10dip"
	        android:layout_below="@id/spinner_title" />
	    
	    <!-- EditText for Grain Name -->
	    <TextView android:id="@+id/name_title"
	        android:text="@string/name"
	        android:layout_below="@id/ingredient_spinner"
	        style="@style/title_light" />
	    
	    <EditText
	        android:id="@+id/name_edit_text"
	        android:hint="@string/enter_name"
	        android:layout_below="@id/name_title"
	        style="@style/text_input"
	        android:selectAllOnFocus="true" />
	    
	    <LinearLayout android:id="@+id/first_ll"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="#00000000"
	        android:layout_below="@id/name_edit_text" >
		              
	    </LinearLayout>
	    
	    <LinearLayout android:id="@+id/second_ll"
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="#00000000"
	        android:layout_below="@id/first_ll" >
			            
	    </LinearLayout>
	    
	    <LinearLayout android:id="@+id/third_ll"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="#00000000"
	        android:layout_below="@id/second_ll" >
		              
	    </LinearLayout>
	    
	    <LinearLayout android:id="@+id/forth_ll"
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:background="#00000000"
	        android:layout_below="@id/third_ll"
	        android:layout_marginBottom="15dip" >
			            
	    </LinearLayout>
	    
	</RelativeLayout>
	
    <!-- Bottom Bar -->
    <LinearLayout android:id="@+id/bottom_nav"
        android:layout_height="70dip"
        android:background="@drawable/actionbar_background"
        android:layout_width="fill_parent" 
        android:padding="15dp"
        android:layout_alignParentBottom="true">
	    
        <!-- Cancel Button -->
	    <Button
	        android:id="@+id/cancel_button"
	        android:onClick="onClick"
	        android:text="@string/cancel"
			style="@style/button_left" />
	
	    <!-- Submit Button -->
	    <Button
	        android:id="@+id/submit_button"
	        android:onClick="onClick"
	        android:text="@string/add"
	        style="@style/button_right" />

    </LinearLayout>

</RelativeLayout>
