<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:orientation="vertical">

    <!-- Colored bar at top -->
    <TextView
        android:id="@+id/colored_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="top"
        android:background="@color/theme_main"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text=""
        android:textColor="#fff">

        <requestFocus/>
    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_above="@+id/bottom_nav"
        android:layout_below="@id/colored_bar"
        android:layout_weight="1"
        android:background="@color/activity_background">

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="0dp">

        </LinearLayout>

    </ScrollView>

    <!-- Bottom Bar -->
    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_alignParentBottom="true"
        android:background="@color/activity_background"
        android:padding="10dp">

        <!-- Cancel Button -->
        <Button
            android:id="@+id/cancel_button"
            style="@style/button_left"
            android:onClick="onClick"
            android:text="@string/cancel"/>

        <!-- Delete Button -->
        <Button
            android:id="@+id/delete_button"
            style="@style/button"
            android:onClick="onClick"
            android:text="@string/delete"/>

        <!-- Submit Button -->
        <Button
            android:id="@+id/submit_button"
            style="@style/button_right"
            android:onClick="onClick"
            android:text="@string/edit"/>

    </LinearLayout>

</RelativeLayout>
